fixed pagination on mobile / fixed head tag on all pages

--- a/styles/pagination.css
+++ b/styles/pagination.css
@@ -12,6 +12,15 @@
   margin-left: 0.45rem;
 }
 
+@media screen and (max-width: 600px) {
+  .pagination .next a {
+    display: hidden;
+  }
+  .pagination .previous a {
+    display: hidden;
+  }
+}
+
 .page-link {
   position: relative;
   display: grid;
